refactor(contextapi): Restructure image metadata API endpoints
into a single endpoint that handles all relevant metadata, rather than
having split endpoints for different kinds of metadata.
