# expected-oas/hwaas.openapi.json
@@ -415,6 +415,46 @@
         ],
         "type": "object"
       },
+      "ImageMetadataToDelete": {
+        "description": "Valid boot image metadata fields for deletion.",
+        "properties": {
+          "remove_tag": {
+            "description": "Remove a tag (by name) from the boot image.",
+            "type": [
+              "string",
+              "null"
+            ]
+          }
+        },
+        "type": "object"
+      },
+      "ImageMetadataToModify": {
+        "description": "Valid boot image metadata fields for modification.",
+        "properties": {
+          "add_tag": {
+            "description": "Add a tag (by name) to the boot image.",
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "architecture": {
+            "description": "Modify the architecture of the boot image.",
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "file_name": {
+            "description": "Modify the user file name of the boot image.",
+            "type": [
+              "string",
+              "null"
+            ]
+          }
+        },
+        "type": "object"
+      },
       "ImageTag": {
         "description": "A tag attached to a BMR image.",
         "properties": {
@@ -1861,45 +1901,6 @@
         "required": [
           "power_id",
           "state"
-        ],
-        "type": "object"
-      },
-      "QueryParamTag": {
-        "description": "The REST query parameter that represents a boot image tag by name",
-        "properties": {
-          "name": {
-            "description": "Name of the requested tag to operate on",
-            "type": "string"
-          }
-        },
-        "required": [
-          "name"
-        ],
-        "type": "object"
-      },
-      "QueryParamsArchitecture": {
-        "description": "The REST query parameter that represents a boot image architecture",
-        "properties": {
-          "architecture": {
-            "description": "Compiled architecture of a boot image",
-            "type": [
-              "string",
-              "null"
-            ]
-          }
-        },
-        "type": "object"
-      },
-      "QueryParamsFileName": {
-        "description": "The REST query parameter that represents a boot image file name",
-        "properties": {
-          "file_name": {
-            "description": "User file name of a boot image",
-            "type": "string"
-          }
-        },
-        "required": [
-          "file_name"
         ],
         "type": "object"
       },
@@ -6249,47 +6250,9 @@
         ]
       }
     },
-    "/images/{image_hash}/architecture": {
-      "get": {
-        "description": "Get the 'architecture' metadata attribute of an image",
-        "parameters": [
-          {
-            "description": "hash of a boot image (sha256sum)",
-            "in": "path",
-            "name": "image_hash",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/Sha256Hash",
-              "description": "hash of a boot image (sha256sum)"
-            },
-            "style": "simple"
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "description": "The architecture"
-          },
-          "500": {
-            "content": {
-              "text/plain; charset=utf-8": {}
-            },
-            "description": "Internal error reason"
-          }
-        },
-        "summary": "Get image architecture",
-        "tags": [
-          "Image API"
-        ]
-      },
-      "post": {
-        "description": "Modify the 'architecture' metadata attribute of an image",
+    "/images/{image_hash}/metadata": {
+      "delete": {
+        "description": "Delete metadata from a BMR image",
         "parameters": [
           {
             "description": "hash of a boot image (sha256sum)",
@@ -6303,11 +6266,11 @@
             "style": "simple"
           },
           {
-            "description": "Compiled architecture of a boot image",
+            "description": "Remove a tag (by name) from the boot image.",
             "in": "query",
-            "name": "architecture",
+            "name": "remove_tag",
             "schema": {
-              "description": "Compiled architecture of a boot image",
+              "description": "Remove a tag (by name) from the boot image.",
               "type": [
                 "string",
                 "null"
@@ -6327,15 +6290,13 @@
             "description": "Internal error reason"
           }
         },
-        "summary": "Post image architecture",
+        "summary": "Delete image metadata",
         "tags": [
           "Image API"
         ]
-      }
-    },
-    "/images/{image_hash}/file_name": {
+      },
       "get": {
-        "description": "Get the 'file name' metadata attribute of an image",
+        "description": "Query all available metadata for a BMR image",
         "parameters": [
           {
             "description": "hash of a boot image (sha256sum)",
@@ -6351,14 +6312,7 @@
         ],
         "responses": {
           "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            },
-            "description": "The file name"
+            "description": "no content"
           },
           "500": {
             "content": {
@@ -6367,13 +6321,13 @@
             "description": "Internal error reason"
           }
         },
-        "summary": "Get image file name",
+        "summary": "Get image metadata",
         "tags": [
           "Image API"
         ]
       },
       "post": {
-        "description": "Modify the 'file name' metadata attribute of an image",
+        "description": "Modify metadata for a BMR image",
         "parameters": [
           {
             "description": "hash of a boot image (sha256sum)",
@@ -6387,13 +6341,41 @@
             "style": "simple"
           },
           {
-            "description": "User file name of a boot image",
+            "description": "Add a tag (by name) to the boot image.",
+            "in": "query",
+            "name": "add_tag",
+            "schema": {
+              "description": "Add a tag (by name) to the boot image.",
+              "type": [
+                "string",
+                "null"
+              ]
+            },
+            "style": "form"
+          },
+          {
+            "description": "Modify the architecture of the boot image.",
+            "in": "query",
+            "name": "architecture",
+            "schema": {
+              "description": "Modify the architecture of the boot image.",
+              "type": [
+                "string",
+                "null"
+              ]
+            },
+            "style": "form"
+          },
+          {
+            "description": "Modify the user file name of the boot image.",
             "in": "query",
             "name": "file_name",
-            "required": true,
             "schema": {
-              "description": "User file name of a boot image",
-              "type": "string"
+              "description": "Modify the user file name of the boot image.",
+              "type": [
+                "string",
+                "null"
+              ]
             },
             "style": "form"
           }
@@ -6409,134 +6391,7 @@
             "description": "Internal error reason"
           }
         },
-        "summary": "Post image metadata file name",
-        "tags": [
-          "Image API"
-        ]
-      }
-    },
-    "/images/{image_hash}/tags": {
-      "delete": {
-        "description": "Remove one or more tags from an existing image",
-        "parameters": [
-          {
-            "description": "hash of a boot image (sha256sum)",
-            "in": "path",
-            "name": "image_hash",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/Sha256Hash",
-              "description": "hash of a boot image (sha256sum)"
-            },
-            "style": "simple"
-          },
-          {
-            "description": "Name of the requested tag to operate on",
-            "in": "query",
-            "name": "name",
-            "required": true,
-            "schema": {
-              "description": "Name of the requested tag to operate on",
-              "type": "string"
-            },
-            "style": "form"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "no content"
-          },
-          "500": {
-            "content": {
-              "text/plain; charset=utf-8": {}
-            },
-            "description": "Internal error reason"
-          }
-        },
-        "summary": "Remove tags from an image",
-        "tags": [
-          "Image API"
-        ]
-      },
-      "get": {
-        "description": "List tags currently attached to the given image",
-        "parameters": [
-          {
-            "description": "hash of a boot image (sha256sum)",
-            "in": "path",
-            "name": "image_hash",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/Sha256Hash",
-              "description": "hash of a boot image (sha256sum)"
-            },
-            "style": "simple"
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/ImageTag"
-                  },
-                  "type": "array"
-                }
-              }
-            },
-            "description": ""
-          },
-          "500": {
-            "content": {
-              "text/plain; charset=utf-8": {}
-            },
-            "description": "Internal error reason"
-          }
-        },
-        "summary": "List tags on an image",
-        "tags": [
-          "Image API"
-        ]
-      },
-      "post": {
-        "description": "Add one or more tags to an existing image",
-        "parameters": [
-          {
-            "description": "hash of a boot image (sha256sum)",
-            "in": "path",
-            "name": "image_hash",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/Sha256Hash",
-              "description": "hash of a boot image (sha256sum)"
-            },
-            "style": "simple"
-          },
-          {
-            "description": "Name of the requested tag to operate on",
-            "in": "query",
-            "name": "name",
-            "required": true,
-            "schema": {
-              "description": "Name of the requested tag to operate on",
-              "type": "string"
-            },
-            "style": "form"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "no content"
-          },
-          "500": {
-            "content": {
-              "text/plain; charset=utf-8": {}
-            },
-            "description": "Internal error reason"
-          }
-        },
-        "summary": "Add tags to an image",
+        "summary": "Modify image metadata",
         "tags": [
           "Image API"
         ]
